# simple-port-scanner-rs

./: Cargo.toml  Makefile  README.md
.github/: release.yml
.github/workflows/: build.yml  format.yml  release.yml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/scanner/: Cargo.toml
crates/scanner/src/: lib.rs  router.rs  scantype.rs
