[workspace]
members = [
    "crates/cli",
    "crates/scanner",
]

[workspace.package]
version = "0.1.0"
authors = ["Ervin Szilagyi"]
edition = "2021"
license = "MIT"
homepage = "https://github.com/domain-recon/port-scanner-rs"
repository = "https://github.com/domain-recon/port-scanner-rs"
keywords = ["port", "scanner"]
description = "Simple port scanner."
rust-version = "1.64.0"

[workspace.dependencies]
scanner = {version = "0.1.0", path = "crates/scanner"}
anyhow = { version = "1.0.66" }
clap = { version = "4.0.18", features = ["derive"] }
[profile.release]
strip = "symbols"
