[package]
name = "sps"
readme = "../../README.md"
rust-version.workspace = true
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
description.workspace = true

[dependencies]
scanner.workspace = true
clap = { workspace = true }
anyhow = { workspace = true }
