[package]
name = "scanner"
readme = "../../README.md"
rust-version.workspace = true
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
description.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
netscan = "0.12.0"
network-interface = "0.1.4"
cidr-utils = "0.5.9"
anyhow = { workspace = true }
clap = { workspace = true }
